<resources>
    <string name="app_name">FilipinoValuesApp</string>
    <string name="intro1">Hello good day to you and today i will be your companion in exploring what values education is. . . </string>
    <string name="intro2">In this application we will learn the importance of values in our lives</string>
    <string name="intro3">By the way my name is Mary and I will be your teacher for this day.</string>
    <string name="intro4">With that all out of the way let us now start!</string>


    <string name="Question">Ang salitang ito ay nagmula sa salitang Latin na \"valere\" na nangangahulugang maging karapat-dapat o maging kanais-nais.</string>
    <string name="Question1">Ito ay tumutukoy sa kakayahan ng mga Pilipino na magbigay ng liwanag at optimismo sa anumang sitwasyon nila upang manatiling determinado sa pinagdadaanan na mga pagsubok at hamon.</string>
    <string name="Question2">ALIN ANG HINDI NABIBILANG.\nAng lahat ng sumusunod ay ang kalakasan ng Katangiang Pilipino MALIBAN SA:</string>
    <string name="Question3">_______ ang kakayahan ng isang tao na harapin ang takot, hapdi, panganib, kawalan ng katiyakan, o intimidasyon.\n\nK _ T _ P _ _ _ _ N</string>
    <string name="Question4">Ito ang pakiramdam ng isang malalim na paghanga sa isang tao o isang bagay na dahil sa taglay nilang mga katangian, kakayahan at mga nagawa.</string>
    <string name="Question5">Ito ang katangian na pagiging palakaibigan, mapagbigay, at maalalahanin.</string>
    <string name="Question6">Alin sa mga sumusunod ang HINDI kasama sa mga \"Pangunahing pangagailangan\".</string>
    <string name="Question7">Isa ito sa pinakakilalang katangian ng mga Pilipino na tumutukoy sa pagiging palakaibigan at bukas na pagtanggap sa ating mga bisita. Kaya naman, ang mga dayuhan ay hindi lamang hanga sa kagandahan ng ating kalikasan ngunit gayundin sa pagiging pagkamagiliw ng mga Pilipino.\n\nH _ _ _ _ T _ L I _ Y</string>
    <string name="Question8">Ito ay isang pananaw na nagsasaad na: \n\"Ang bawat aksyon ng tao ay palaging may katumbas at kabaligtarang reaksyon\".</string>
    <string name="Question9">Ito ay nagpapahayag ng pagkakaisa ng Pilipino sa pamamagitan ng pagtutulungan bilang isang bayan.</string>
    <string name="Whoops">Whoops, there is nothing to display.</string>


    <string name="JoyAndHumor">Joy and Humor</string>
    <string name="Unselfishness">Unselfishness</string>
    <string name="SelfDiscipline">Self Discipline</string>
    <string name="DisiPlinaSaSarili">Disiplina sa Sarili</string>
    <string name="Love">Love</string>
    <string name="PagIbig">Pag-ibig</string>
    <string name="Flex_Adapt_Create">Flexibility, Adaptability, Creativity</string>
    <string name="Hard_work">Hard work and Industry</string>
    <string name="Faith">Faith and Religiosity</string>
    <string name="Friend">Friend Orientation</string>
    <string name="Howto">How To Play</string>
    <string name="Score">Score</string>
    <string name="Kabaitan">Kabaitan</string>
    <string name="Mapanindigan">Mapanindigan</string>
    <string name="Pagpapasalamat">Pagpapasalamat</string>
    <string name="Malikhain">Malikhain</string>
    <string name="Hangin">Hangin</string>
    <string name="Pagkain">Pagkain</string>
    <string name="Tubig">Tubig</string>
    <string name="Laruan">Laruan</string>
    <string name="Pangako">Pangako</string>
    <string name="Pagkamalikhain">Pagkamalikhain</string>
    <string name="PagkatuonsaPamilya">Pagkatuon sa Pamilya</string>
    <string name="BayanihanSpirit">Bayanihan Spirit</string>

    <string name="underscore">_</string>
    <string name="ValuesQuiz">Values Quiz</string>
    <string name="Email">Email</string>
    <string name="Background">Background image</string>
    <string name="Hamburger">Hamburger Menu</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="EnterAsGuest">Enter as GUEST</string>
    <string name="NotYetReg">Not yet a user? REGISTER</string>
    <string name="TeachingValuesApp">Teaching Values Application</string>
    <string name="Reset">Reset</string>
    <string name="Registration">Registration</string>
    <string name="Register">Register</string>
    <string name="Username">Username</string>
    <string name="RetypePassword">Re-type password</string>
    <string name="StartGame">Start Game</string>
    <string name="Leaderboards">Leaderboards</string>
    <string name="HowToPlay">How to Play</string>
    <string name="WelcomeTo">Welcome to</string>
    <string name="Next">Next</string>
    <string name="Answer">Answer</string>
    <string name="Congrats">Congratulations!</string>



    <string name="V">V</string>
    <string name="A">A</string>
    <string name="L">L</string>
    <string name="U">U</string>
    <string name="E">E</string>
    <string name="É">É</string>
    <string name="R">R</string>
    <string name="P">P</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="O">O</string>
    <string name="K">K</string>
    <string name="M">M</string>
    <string name="À">À</string>

</resources>