<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_img"/>

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/ValuesQuiz"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/Question2"
        android:textAlignment="center"
        android:background="@drawable/textview_round"
        android:padding="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/q2Choice1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/tio_login"
        android:onClick="MCQ1"
        android:text="@string/Faith"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/q2Choice2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="MCQ2"
        android:text="@string/Flex_Adapt_Create"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/q2Choice1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/q2Choice3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="MCQ3"
        android:text="@string/Friend"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/q2Choice2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/q2Choice4"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="MCQ4"
        android:text="@string/Hard_work"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/q2Choice3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/questionnaire_buttons"
        android:onClick="nextButton1"
        android:text="@string/Next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/q2Choice4" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question #"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/QuestionNumber"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10/10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/intro_title"
        app:layout_constraintTop_toTopOf="@+id/Question" />


</androidx.constraintlayout.widget.ConstraintLayout>