<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire8">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/ValuesQuiz"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/M"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityM"
        android:text="@string/M"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/Question8"
        android:background="@drawable/textview_round"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/K"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityK"
        android:text="@string/K"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/M"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/À"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityÀ"
        android:text="@string/À"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/K"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/A"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityA"
        android:text="@string/A"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/À"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/R"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityR"
        android:text="@string/R"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/A"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/FirstLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/M"
        app:layout_constraintStart_toStartOf="@+id/M"
        app:layout_constraintTop_toBottomOf="@+id/M" />

    <TextView
        android:id="@+id/SecondLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/K"
        app:layout_constraintStart_toStartOf="@+id/K"
        app:layout_constraintTop_toTopOf="@+id/FirstLetter" />

    <TextView
        android:id="@+id/ThirdLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/À"
        app:layout_constraintStart_toStartOf="@+id/À"
        app:layout_constraintTop_toTopOf="@+id/SecondLetter" />

    <TextView
        android:id="@+id/FourthLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/A"
        app:layout_constraintStart_toStartOf="@+id/A"
        app:layout_constraintTop_toTopOf="@+id/ThirdLetter" />

    <TextView
        android:id="@+id/FifthLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/R"
        app:layout_constraintStart_toStartOf="@+id/R"
        app:layout_constraintTop_toTopOf="@+id/FourthLetter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/questionnaire_buttons"
        android:onClick="resetLetters"
        android:text="@string/Reset"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/FirstLetter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/questionnaire_buttons"
        android:onClick="nextButton"
        android:text="@string/Next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/FifthLetter" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question #  "
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/questionNumber"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/QuestionTotal"
        app:layout_constraintStart_toStartOf="@+id/QuestionTotal"
        app:layout_constraintTop_toTopOf="@+id/Question" />

    <TextView
        android:id="@+id/QuestionTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   /10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/intro_title"
        app:layout_constraintTop_toTopOf="@+id/Question" />

</androidx.constraintlayout.widget.ConstraintLayout>