<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questionnaire4">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/E2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityE2"
        android:text="@string/É"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/P"
        app:layout_constraintStart_toEndOf="@+id/R"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/P"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityP"
        android:text="@string/P"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="324dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/ValuesQuiz"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/Question4"
        android:background="@drawable/textview_round"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/O"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityO"
        android:text="@string/O"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/S"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/R"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityR"
        android:text="@string/R"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/T"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityT"
        android:text="@string/T"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/S"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityS"
        android:text="@string/S"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/E2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/E"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/tio_login"
        android:onClick="setOpacityE"
        android:text="@string/E"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/T"
        app:layout_constraintStart_toEndOf="@+id/S"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/FirstLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/R"
        app:layout_constraintTop_toBottomOf="@+id/S" />

    <TextView
        android:id="@+id/SeventhLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/P"
        app:layout_constraintTop_toBottomOf="@+id/E" />

    <TextView
        android:id="@+id/SixthLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/E2"
        app:layout_constraintTop_toBottomOf="@+id/E" />

    <TextView
        android:id="@+id/FifthLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/S"
        app:layout_constraintTop_toBottomOf="@+id/E" />

    <TextView
        android:id="@+id/FourthLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/E2"
        app:layout_constraintTop_toBottomOf="@+id/S" />

    <TextView
        android:id="@+id/ThirdLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/S"
        app:layout_constraintTop_toBottomOf="@+id/S" />

    <TextView
        android:id="@+id/SecondLetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="32dp"
        android:text="@string/underscore"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/S" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/questionnaire_buttons"
        android:onClick="resetLetters"
        android:text="@string/Reset"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/nextButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/questionnaire_buttons"
        android:onClick="nextButton"
        android:text="@string/Next"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/FourthLetter" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Question #  "
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/questionNumber"
        app:layout_constraintTop_toBottomOf="@+id/intro_title" />

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/QuestionTotal"
        app:layout_constraintStart_toStartOf="@+id/QuestionTotal"
        app:layout_constraintTop_toTopOf="@+id/Question" />

    <TextView
        android:id="@+id/QuestionTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   /10"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/intro_title"
        app:layout_constraintTop_toTopOf="@+id/Question" />

</androidx.constraintlayout.widget.ConstraintLayout>