<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGame">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/Background"
        android:scaleType="fitXY"
        android:src="@drawable/bg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageButton
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/tio_login"
        android:onClick="settingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textview_round_brown"
        android:padding="10dp"
        android:text="HOME"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGame"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/tio_login"
        android:onClick="gameStart"
        android:text="@string/StartGame"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Leaderboards"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tio_login"
        android:onClick="leaderBoards"
        android:text="@string/Leaderboards"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/startGame"
        app:layout_constraintStart_toStartOf="@+id/startGame"
        app:layout_constraintTop_toBottomOf="@+id/startGame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/howToPlay"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/tio_login"
        android:onClick="howToPlay"
        android:text="@string/HowToPlay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/startGame"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/startGame"
        app:layout_constraintTop_toBottomOf="@+id/startGame" />

</androidx.constraintlayout.widget.ConstraintLayout>